consolidate card border styling, apply to both sides to avoid overlap

--- a/styles/sass/_card.scss
+++ b/styles/sass/_card.scss
@@ -34,4 +34,8 @@
       --angle: 180deg;
     }
   }
+
+  .card-border {
+    @apply rounded-2xl border-8 border-gray-500/10;
+  }
 }
